[tool.poetry]
name = "pybot"
version = "0.1.0"
description = ""
authors = ["ayusummer233"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.79.0"
requests = "2.28.1"
uvicorn = "0.18.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true